Kickoff thought that its source model is KAStats::ResultModel. It was mistaken.

BUG:355672